--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # https://help.github.com/en/articles/displaying-a-sponsor-button-in-your-repository
 patreon: jahed
 liberapay: jahed
-ko-fi: hedjahead
+ko_fi: hedjahead
 custom: https://paypal.me/jahed/1
